test_programs/compile_failure/noirc_frontend_tests_visibility_errors_once_on_unused_import_that_is_not_accessible/src/main.nr

        mod moo {
            struct Foo {}
        }
        use moo::Foo;
        fn main() {
            let _ = Foo {};
        }
    